--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_sticky_header: "^0.4.2"
   flutter_slidable: ^0.5.4
+  async_redux: ^2.4.4
 
 dev_dependencies:
   flutter_test:
