--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   flutter_sticky_header: "^0.4.2"
   flutter_slidable: ^0.5.4
   async_redux: ^2.4.4
+  camera:
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
