--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_slidable: ^0.5.4
   async_redux: ^2.4.4
   rxdart: ^0.23.1
+  audio_recorder:
+  holding_gesture:
   permission_handler:
   camera:
   path_provider:
